--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.3.3"
   }
 }
