--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "react-three-fiber": "^6.0.13",
     "three": "^0.154.0"
   },
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
